#616 fixed headline spacing for $mdDialog popups

--- a/src/main/scss/main.scss
+++ b/src/main/scss/main.scss
@@ -518,7 +518,7 @@ md-tooltip {
   margin: 0px 5px auto 0px;
   color: $brand-primary;
 }
-.fdz-bootstrap-headline {
+.fdz-bootstrap-headline, md-dialog h2 {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
 }
